Refactor dialogs and add more validation

--- a/tree-challenge-ui/src/app/components/dialogs/collect-instructions/collect-instructions.component.html
+++ b/tree-challenge-ui/src/app/components/dialogs/collect-instructions/collect-instructions.component.html
@@ -12,6 +12,9 @@
             <mat-error *ngIf="this.form.value.numberOfChildren > 15">
                 Must be less than or equal to 15
             </mat-error>
+            <mat-error *ngIf="this.form.value.numberOfChildren < 1">
+                Must be greater than 0
+            </mat-error>
             <mat-error *ngIf="this.form.get('numberOfChildren').hasError('pattern')">
                 Must be a number
             </mat-error>
@@ -29,6 +32,9 @@
             <mat-error *ngIf="!this.form.valid && this.limitsError">
                 Must be more than lower limit
             </mat-error>
+            <mat-error *ngIf="this.form.value.upperLimit < 0">
+                Must be greater than 0
+            </mat-error>
             <mat-error *ngIf="this.form.get('upperLimit').hasError('pattern')">
                 Must be a number
             </mat-error>
@@ -45,6 +51,9 @@
             </mat-error>
             <mat-error *ngIf="!this.form.valid && this.limitsError">
                 Must be less than upper limit
+            </mat-error>
+            <mat-error *ngIf="this.form.value.lowerLimit < 0">
+                Must be greater than 0
             </mat-error>
             <mat-error *ngIf="this.form.get('lowerLimit').hasError('pattern')">
                 Must be a number
