Allow enter press to submit dialog form and change order of buttons

--- a/tree-challenge-ui/src/app/components/dialogs/add-edit/add-edit.component.html
+++ b/tree-challenge-ui/src/app/components/dialogs/add-edit/add-edit.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>{{this.title}}</h2>
-<mat-dialog-content [formGroup]="form">
+<mat-dialog-content [formGroup]="form" (keydown.enter)="save()">
     <mat-form-field color="accent">
         <input matInput 
                 placeholder="Factory Name"
@@ -12,6 +12,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button mat-raised-button color="secondary" (click)="close()" class="close-button">Cancel</button>
     <button mat-raised-button color="primary" type="submit" (click)="save()" class="close-button">Save</button>
+    <button mat-raised-button color="secondary" (click)="close()" class="close-button">Cancel</button>
 </mat-dialog-actions>
