--- a/tree-challenge-ui/src/app/components/dialogs/collect-instructions/collect-instructions.component.html
+++ b/tree-challenge-ui/src/app/components/dialogs/collect-instructions/collect-instructions.component.html
@@ -16,7 +16,7 @@
                 Must be greater than 0
             </mat-error>
             <mat-error *ngIf="this.form.get('numberOfChildren').hasError('pattern')">
-                Must be a number
+                Must be a whole number
             </mat-error>
         </mat-form-field>
     </div>
@@ -29,14 +29,14 @@
             <mat-error *ngIf="!this.form.value.upperLimit">
                 Upper Limit is <strong>required</strong>
             </mat-error>
-            <mat-error *ngIf="!this.form.valid && this.limitsError">
+            <mat-error *ngIf="this.form.get('upperLimit').hasError('min')">
                 Must be more than lower limit
             </mat-error>
             <mat-error *ngIf="this.form.value.upperLimit < 0">
                 Must be greater than 0
             </mat-error>
             <mat-error *ngIf="this.form.get('upperLimit').hasError('pattern')">
-                Must be a number
+                Must be a whole number
             </mat-error>
         </mat-form-field>
     </div>
@@ -49,7 +49,7 @@
             <mat-error *ngIf="!this.form.value.lowerLimit">
                 Lower Limit is <strong>required</strong>
             </mat-error>
-            <mat-error *ngIf="!this.form.valid && this.limitsError">
+            <mat-error *ngIf="this.form.get('lowerLimit').hasError('max')">
                 Must be less than upper limit
             </mat-error>
             <mat-error *ngIf="this.form.value.lowerLimit < 0">
