Fix lower limit validator message

--- a/tree-challenge-ui/src/app/components/dialogs/collect-instructions/collect-instructions.component.html
+++ b/tree-challenge-ui/src/app/components/dialogs/collect-instructions/collect-instructions.component.html
@@ -56,7 +56,7 @@
                 Must be greater than 0
             </mat-error>
             <mat-error *ngIf="this.form.get('lowerLimit').hasError('pattern')">
-                Must be a number
+                Must be a whole number
             </mat-error>
         </mat-form-field>
     </div>
